# rag-pipeline-sentiment-signals

./: .gitignore  README.md  main.py  pyproject.toml
backend/agent/: rag_sentiment_scoring.py
backend/ingestion/: chunk.py  embed.py  main.py  price_fetcher.py  snapshot_scraping.py
config/: __init__.py  logging_config.py  spaces.yaml
examples/idempotency/: crypto_transfer.py
frontend/: app.py
rag-sentiment-signals/angular-frontend/src/: styles.css
rag-sentiment-signals/angular-frontend/src/app/: app.component.ts
rag-sentiment-signals/backend/src/agent/: rag_sentiment_scoring.py
rag-sentiment-signals/backend/src/config/: __init__.py  logging_config.py
rag-sentiment-signals/backend/src/ingestion/: embed.py  main.py
rag-sentiment-signals/backend/src/routers/: api.py
rag-sentiment-signals/gradio/: app.py
react-crypto-dashboard/: index.html  package.json  tailwind.config.js
react-crypto-dashboard/src/: App.jsx  index.css
react-crypto-dashboard/src/api/: coingecko.js
react-crypto-dashboard/src/components/: FearGreedGauge.jsx  GlobalStats.jsx  Header.jsx  MarketTable.jsx  PriceCard.jsx  PriceChart.jsx  VolumeChart.jsx
react-crypto-dashboard/src/hooks/: useCryptoData.js
smart-contract-vulnerability-detector/ml/: README.md
smart-contract-vulnerability-detector/ml/scripts/: collect_data.py
src/angular-frontend/: package-lock.json  package.json
src/backend/agent/: rag_sentiment_scoring.py
src/backend/ingestion/: audit_pdf_scrape.py  price_fetcher.py
src/backend/routers/: api.py
src/config/: logging_config.py
(+3 files in other folders)
