[project]
name = "rag-pipeline-sentiment-signals"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.4.1",
    "langchain>=1.2.7",
    "langchain-community>=0.4.1",
    "langchain-groq>=1.1.1",
    "pyyaml>=6.0.3",
    "requests>=2.32.5",
    "sentence-transformers>=5.2.2",
]
